--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@types/express": "^4.17.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.4",
     "react-datepicker": "^4.16.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13"
   }
 }
